--- a/main.html
+++ b/main.html
@@ -10,6 +10,14 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<ol data-ns-test="shoppingList">
+		<li>chai</li>
+		<li>tea</li>
+		<li>sugar</li>
+	</ol>
+	<ul data-ns-test="holidayList"></ul>
+	<li>monday</li>
+	<li>sunday</li>
 
 </body>
 
