--- a/main.html
+++ b/main.html
@@ -16,8 +16,9 @@
 		<li>sugar</li>
 	</ol>
 	<ul data-ns-test="holidayList"></ul>
-	<li>monday</li>
-	<li>sunday</li>
+	<li>Dehli</li>
+	<li>Mumbai</li>
+	<li>Goa</li>
 
 </body>
 
